added DOM on some text

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="ext.js"></script>
 </head>
 
 <body>
@@ -20,7 +21,7 @@
         <div class="container-sm">
             <nav class="navbar navbar-expand-lg navbar-dark fixed-top shadow">
                 <div class="container-sm">
-                    <a class="navbar-brand" href="#"><img src="./images/logo.png" style="height: 50px;" alt=""></a>
+                    <a class="navbar-brand" href="./index.html"><img src="./images/logo.png" style="height: 50px;" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -43,8 +44,8 @@
                                     Services
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Termite Control</a></li>
-                                    <li><a class="dropdown-item" href="#">Pest Control</a></li>
+                                    <li><a class="dropdown-item" href="#" onclick="service()">Termite Control</a></li>
+                                    <li><a class="dropdown-item" href="#" onclick="service()">Pest Control</a></li>
                                 </ul>
                             </li>
                         </ul>
