--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Intermite</title>
     <link rel="stylesheet" href="./bootstrap-5.1.3-dist/js/bootstrap.min.js">
     <link rel="stylesheet" href="./bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <script src="./bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
